# vipad

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  test.cpp
src/: CMakeLists.txt  ippe.cpp  ippe.h  lpe.cpp  lpe.h
src/apriltag/: CMakeLists.txt  README.md
src/apriltag/inc/: apriltag.h  apriltag_allocator.h  apriltag_math.h  g2d.h  homography.h  image_u8.h  matd.h  math_util.h  svd22.h  tag_family.h  unionfind.h  zarray.h
src/apriltag/inc/common/: image_types.h  image_u8.h  workerpool.h
src/apriltag/src/: apriltag.c  apriltag.cpp  apriltag_quad_thresh.c  apriltag_quad_thresh.cpp  g2d.cpp  homography.c  homography.cpp  image_u8.c  image_u8.cpp  matd.cpp  svd22.cpp  tag_family.c  tag_family.cpp  zarray.cpp
src/apriltag/src/common/: image_u8.c  image_u8x3.c  workerpool.c
src/common/: CMakeLists.txt
src/ippe/: CMakeLists.txt  README.md  ippe.cpp  ippe.h
